--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="zoom_value_default">Zoom x1.00</string>
     <string name="dual_shot">Dual shot</string>
     <string name="zoom_not_supported">Zoom not suppported\n</string>
+    <string name="environment_toggle">Outdoor mode</string>
 </resources>
